# benchmark-service

./: .gitignore  README.md
benchmark_service/: .env.template  .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt
benchmark_service/config/rabbitmq/: advanced.config
benchmark_service/src/: benchmark_runner.py  dialog_clustering.py  home.py
benchmark_service/src/analysis/: __init__.py  error_clustering.py  sample_comparison.py
benchmark_service/src/benchmarking/: __init__.py  bootstrap.py  config_models.py  core.py  page_utils.py  runner.py  worker.py
benchmark_service/src/clustering/: __init__.py  legacy.py  text.py
benchmark_service/src/common/: __init__.py  jsonl.py  security.py  time.py  utils.py
benchmark_service/src/integrations/: __init__.py  litellm.py
benchmark_service/src/judge/: __init__.py  calibration.py
benchmark_service/src/pages/: 01_Разметка.py  02_Генерация.py  03_Анализ_и_редактирование_данных.py  04_Бенчмарк.py  (+5 more)
benchmark_service/tests/: test_analysis_sample_comparison.py  test_benchmarking_core.py  test_bootstrap.py  test_clustering_text.py  test_common_jsonl.py  test_custom_eval.py
embedder_gemma/: .env.templates  .gitignore  .gitlab-ci.yml  Dockerfile.cpu.prod  Dockerfile.dev  Dockerfile.prod  README.md  docker-compose.dev.yml  docker-compose.prod.yml  pyproject.toml
embedder_gemma/.gitlab-ci/templates/: build.yml  lint.yml
embedder_gemma/src/core/: config.py  dependences.py  logger_config.py
embedder_gemma/src/rag_embedder/: main.py
embedder_gemma/src/rag_embedder/api/: api.py
embedder_gemma/src/rag_embedder/api/endpoints/: embed.py  health.py
embedder_gemma/src/rag_embedder/models/: gemma.py
embedder_gemma/src/rag_embedder/schemas/: input.py  output.py
embedder_gemma/tests/stress/: locust.py
(+22 files in other folders)
