[project]
name = "rag-embedder"
version = "0.1.0"
description = "Сервис для векторизации текста"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>0.103.0",
    "numpy>=1.24.0,<2.0",
    "pydantic>2.3.0",
    "pydantic-settings>=2.11.0",
    "python-multipart>=0.0.20",
    "requests>2.31.0",
    "transformers==4.57.3",
    "uvicorn[standard]>0.23.0",
    "torch==2.6",
    "sentence-transformers>=5.1.2",
    "clearml>=2.0.2",
]

[dependency-groups]
dev = [
    "ruff>=0.13.2",
]

[tool.ruff]

exclude = [
    ".bzr", ".direnv", ".eggs", ".git", ".git-rewrite", ".hg",
    ".ipynb_checkpoints", ".mypy_cache", ".nox", ".pants.d",
    ".pyenv", ".pytest_cache", ".pytype", ".ruff_cache", ".svn",
    ".tox", ".venv", ".vscode", "__pypackages__", "_build",
    "buck-out", "build", "dist", "node_modules", "site-packages", "venv",
    "grpc_stub"
]

line-length = 100
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]

known-first-party = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (импорты)
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade (советы по modern Python)
    "T20", # flake8-print (ловит print в prod-коде)
    "ARG", # unused arguments
    "PTH", # pathlib over os.path
    "D",
]

ignore = [
    "D104",  # Не требует докстринги у пакетов (__init__.py)
    "D105",  # Не требует докстринги у магических методов (__str__, __repr__)
    "D415", # Не требует точки на первой строке докстринги
    "B008"
]
